Fixes truncation problem in show scorecard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,3 +75,10 @@ ul.wizard {
   }
 }
 
+a.truncate {
+  display: block;
+  width: 180px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
